fix background image not showing

--- a/css/style.css
+++ b/css/style.css
@@ -125,7 +125,7 @@ body {
 
 .homeheader {
     height: 100vh;
-    background-image: url('../photos/portfolio/mezonnight.jpg');
+    background-image: url('../photos/Portfolio/mezonnight.jpg');
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center center;
